# stmo-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
src/: api.rs  lib.rs  main.rs  models.rs  update_checker.rs
src/commands/: archive.rs  dashboards.rs  datasources.rs  deploy.rs  discover.rs  execute.rs  fetch.rs  init.rs  mod.rs  update.rs
templates/init/: CLAUDE.md  pre-commit-config.yaml  sqlfluff  yamllint
templates/schema_queries/: README.md  bigquery_list_tables.sql  mysql_list_tables.sql  postgres_list_tables.sql
tests/: api_integration.rs  dashboard_commands.rs  deploy_commands.rs  proxy_tunnel.rs  update_checker.rs
tests/common/: mod.rs
