[package]
name = "redash-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
dialoguer = "0.11"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
tokio-test = "0.4"
pretty_assertions = "1"
